# kube-knots

./: .eslintrc.cjs  .gitignore  .pnp.cjs  .prettierignore  .prettierrc.js  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  patch.sh  release.sh  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  feature-request.yml  feature_request.yml
.github/helpers/: update-gist.js
.github/workflows/: ci.yaml  docs.yaml  pr-checks.yaml  release.yaml
app/docs/: docusaurus.config.js  package.json  tailwind.config.cjs
app/kube-knots/: index.html  package.json  tailwind.config.cjs  tsconfig.json  umami.js
app/kube-knots/src-tauri/: Cargo.toml  tauri.conf.json
app/kube-knots/src-tauri/src/: main.rs
app/kube-knots/src-tauri/src/cluster/: events.rs  namespaces.rs  node_metrics.rs  nodes.rs
app/kube-knots/src-tauri/src/configurations/: horizontal_pod_autoscalers.rs  mod.rs  pod_disruption_budgets.rs
app/kube-knots/src-tauri/src/core/: config.rs
app/kube-knots/src-tauri/src/internal/: client.rs  mod.rs  resources.rs
app/kube-knots/src-tauri/src/networking/: ingresses.rs  services.rs
app/kube-knots/src-tauri/src/workloads/: cron_jobs.rs  daemon_sets.rs  deployments.rs  jobs.rs  pod_metrics.rs  pods.rs  replica_sets.rs  stateful_sets.rs
src/: App.tsx  app-providers.tsx  app.tsx  layout.tsx  main.tsx  root-view.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/cluster/: events.rs  mod.rs  namespaces.rs  node_metrics.rs  nodes.rs
src-tauri/src/configurations/: config_maps.rs  horizontal_pod_autoscalers.rs  mod.rs  secrets.rs
src-tauri/src/core/: config.rs
src-tauri/src/cron_jobs/: mod.rs
src-tauri/src/internal/: mod.rs  resources.rs
src-tauri/src/networking/: ingresses.rs  mod.rs  services.rs
src-tauri/src/resources/: cron_jobs.rs  deployments.rs  jobs.rs  mod.rs  namespaces.rs  pods.rs  stateful_sets.rs
src-tauri/src/resources/internal/: mod.rs
src-tauri/src/workloads/: cron_jobs.rs  daemon_sets.rs  deployments.rs  jobs.rs  mod.rs  pod_metrics.rs  pods.rs  replica_sets.rs  replication_controllers.rs  stateful_sets.rs
src-tauri/src/workloads/internal/: mod.rs
src/clusters/: events.tsx  namespaces.tsx  node-action-modal.tsx  node-drain-modal.tsx  nodes.tsx
src/components/: action-group.tsx  delete-modal.tsx  drawer.tsx  modal.tsx  namespace-select.tsx  node-action-modal.tsx  pod-logs.tsx  (+13 more)
(+131 files in other folders)
