[package]
name = "kube-knots"
version = "0.0.0"
description = "A Kuberenetes Manager"
authors = ["David Hu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
kube = { version = "0.78.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
openssl = { version = "0.10.35", features = ["vendored"] }
tokio = { version = "1.25.0", features = ["macros"] }
tokio-util = { version = "0.7.7", features = ["io"] }
futures = "0.3"
tungstenite = "0.18.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
