[package]
name = "kube-knots"
version = "0.0.0"
description = "A Kuberenetes Manager"
authors = ["David Hu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["app-all", "devtools", "os-all", "process-exit", "process-relaunch", "updater"] }
kube = { version = "0.83.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
openssl = { version = "0.10.48", features = ["vendored"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "0.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
